--- a/styles/components/taskboard.scss
+++ b/styles/components/taskboard.scss
@@ -4,6 +4,7 @@
   height: calc(100vh - 80px);
   display: flex;
   overflow-x: auto;
+  overflow-y: hidden;
 }
 
 .taskboard.empty {
